# ChangeLog for sys-libs/libselinux
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.45 2006/03/18 14:52:15 pebenito Exp $

*libselinux-1.30 (18 Mar 2006)

  18 Mar 2006; Chris PeBenito <pebenito@gentoo.org> +libselinux-1.30.ebuild:
  New upstream release.

  22 Feb 2006; Stephen Bennett <spb@gentoo.org> libselinux-1.28.ebuild:
  Alpha stable

*libselinux-1.28-r1 (20 Feb 2006)

  20 Feb 2006; Chris PeBenito <pebenito@gentoo.org> +files/compat.py,
  +libselinux-1.28-r1.ebuild:
  Add python-selinux compatability aliases to swig wrapper.

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> libselinux-1.28.ebuild:
  Marked stable on mips.

  09 Feb 2006; Chris PeBenito <pebenito@gentoo.org> libselinux-1.28.ebuild:
  Move python_version out of global scope.

  29 Jan 2006; Chris PeBenito <pebenito@gentoo.org> libselinux-1.28.ebuild:
  Add python version handling to fix #120829, and add -fPIC to LDFLAGS to
  hopefully fix #119271.

  17 Jan 2006; Chris PeBenito <pebenito@gentoo.org> libselinux-1.28.ebuild:
  Mark stable, x86, amd64, ppc, sparc.

  14 Jan 2006; Stephen Bennett <spb@gentoo.org> libselinux-1.28.ebuild:
  Added ~alpha

  15 Dec 2005; Chris PeBenito <pebenito@gentoo.org> libselinux-1.28.ebuild:
  Tighten up versioning to try to prevent mismatch problems as seen in #112348.

*libselinux-1.28 (09 Dec 2005)

  09 Dec 2005; Chris PeBenito <pebenito@gentoo.org>
  -files/libselinux-1.22.diff, -libselinux-1.22-r1.ebuild,
  +libselinux-1.28.ebuild:
  New upstream release.

  09 Sep 2005; Chris PeBenito <pebenito@gentoo.org> libselinux-1.24.ebuild:
  Mark stable.

*libselinux-1.24 (25 Jun 2005)

  25 Jun 2005; Chris PeBenito <pebenito@gentoo.org> -libselinux-1.20.ebuild,
  -libselinux-1.22.ebuild, +libselinux-1.24.ebuild:
  New upstream release.

  13 May 2005; Chris PeBenito <pebenito@gentoo.org>
  libselinux-1.22-r1.ebuild:
  Mark stable.
