@@ -1,33 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 4b8784cdc543ac5775d364f1a8b632e1 ChangeLog 6459
-RMD160 d44b0ec0bddf28b8e5b22fce2fdb52545d15f259 ChangeLog 6459
-SHA256 79bd5acfa6952563eda86b1c0fc44f91cb57d1a03b77f5710c2d5363c210c3cb ChangeLog 6459
+MD5 09d33da197c1ff962b5eff450af8a327 ChangeLog 6637
+RMD160 31c21fb4f3054f4da14ed02cc6ca0296415f230f ChangeLog 6637
+SHA256 f5d7da07aea2ee79b16d478e03bd14ead2a85f4ffd30b0ed34f1360ff909c2c7 ChangeLog 6637
 MD5 ca253cc3a0e643b8d3e209a53d66dd50 files/compat.py 461
 RMD160 ae776a51f27564321845126c39874eab953a41cd files/compat.py 461
 SHA256 d3b3efe9b9fd946c917a6faccca715c4056748b9c861080fe6f6d7cfbaf87f50 files/compat.py 461
-MD5 7f7600bda169c50d374156b98d0fa86a files/digest-libselinux-1.24 63
-RMD160 31c0004225219d93b979d3377bb9fda311c1607d files/digest-libselinux-1.24 63
-SHA256 2100e45d94c1c924bd0f3d78aab9518beee03042cae80f210c834117a8112d7b files/digest-libselinux-1.24 63
-MD5 5c9f2de785e321be6926afae539f05b9 files/digest-libselinux-1.28 64
-RMD160 b4d452d84a499eb57393ab039b39f18f58eae544 files/digest-libselinux-1.28 64
-SHA256 d62c87d4fa403f7f490373767803bc0625669f20b415d78d2e708ac80bce2b6e files/digest-libselinux-1.28 64
 MD5 5c9f2de785e321be6926afae539f05b9 files/digest-libselinux-1.28-r1 64
 RMD160 b4d452d84a499eb57393ab039b39f18f58eae544 files/digest-libselinux-1.28-r1 64
 SHA256 d62c87d4fa403f7f490373767803bc0625669f20b415d78d2e708ac80bce2b6e files/digest-libselinux-1.28-r1 64
 MD5 52246b46b701f905fdc307cea3bb3609 files/digest-libselinux-1.30 238
 RMD160 2d3939e2a238a680170f330716d9188268158bc4 files/digest-libselinux-1.30 238
 SHA256 3b664beda14edffcc9bdf9868f503da997bca7f01cdc478114096c71486a60a9 files/digest-libselinux-1.30 238
-MD5 40825b53dc0b57fadf0823982bdac34b libselinux-1.24.ebuild 1131
-RMD160 db35bec0f296a30cbfa5b66f8c1ed5f5951b0614 libselinux-1.24.ebuild 1131
-SHA256 c1d1d535b29bc7ef933e176fbfec760ead886be551c8b4f2fffdec19057caca6 libselinux-1.24.ebuild 1131
-MD5 80d985283c695cc38c3a2b9c699806e6 libselinux-1.28-r1.ebuild 1126
-RMD160 bc21e676ae42f0c69525802bc5bf5543049db27e libselinux-1.28-r1.ebuild 1126
-SHA256 daaf6568f7847de8b33cdae57c6423a0d95e1c4d5d0bd72c2cccf812b08bfb9a libselinux-1.28-r1.ebuild 1126
-MD5 8cc2ebce6cf54e692848ad171c1deeb6 libselinux-1.28.ebuild 1024
-RMD160 f75c6d19126db889e806c8eab2c616dee62e0b11 libselinux-1.28.ebuild 1024
-SHA256 1b289b2bbab7521b0ba5446456ca0f686276ea9c306e8a4d49a70f5251854703 libselinux-1.28.ebuild 1024
+MD5 0d6d8d50c7f23ef61337f5f58150b53b libselinux-1.28-r1.ebuild 1120
+RMD160 ce591947e72efcace593bbb531b3ca87d8cae16c libselinux-1.28-r1.ebuild 1120
+SHA256 040775ae2a0f209879acbb3344d2f2f61f976c0974977dec734d63f7fb4147fb libselinux-1.28-r1.ebuild 1120
 MD5 7b4a0aeba500763d2260cbb6c4472844 libselinux-1.30.ebuild 1355
 RMD160 5772788711fc6de74dcb808b91d0eff10cec5d8f libselinux-1.30.ebuild 1355
 SHA256 1f903046f2e6703b0bb561cc753fd3df81322f8eba2813eb7ee2e802290f464b libselinux-1.30.ebuild 1355
@@ -37,7 +25,7 @@ SHA256 e691ecff0c45ccbd6cf813fbd7f23e489dabad664e89e6b21b8c7c1785550f9e metadata
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFEHCgRJ+ChZlpDtAoRAhaaAKCkMz1Gg1fbrrhAIvMFuEVKf6+m1QCfcefw
-u5R7TjpZ2IUu+CwlclLubCw=
-=95qZ
+iD8DBQFEIdNrJ+ChZlpDtAoRAl6uAJ0VfBdbHpyYqDQr5Ufd8H+oNqXu/gCfSE3p
+inrq/Cux24r4hDYjCdhTWFk=
+=IstU
 -----END PGP SIGNATURE-----
