@@ -1,42 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libselinux/Attic/libselinux-1.24.ebuild,v 1.2 2005/09/09 02:56:27 pebenito Exp $
-
-IUSE=""
-
-inherit eutils multilib
-
-DESCRIPTION="SELinux userland library"
-HOMEPAGE="http://www.nsa.gov/selinux"
-SRC_URI="http://www.nsa.gov/selinux/archives/${P}.tgz"
-LICENSE="public-domain"
-SLOT="0"
-KEYWORDS="x86 ppc sparc amd64 mips"
-#KEYWORDS="~x86 ~ppc ~sparc ~amd64 ~mips"
-
-DEPEND="virtual/libc"
-
-src_unpack() {
-	unpack ${A}
-	cd ${S}
-
-	# make portage CFLAGS work
-	sed -i -e "s:-Wall:-Wall ${CFLAGS}:g" ${S}/src/Makefile \
-		|| die "src Makefile CFLAGS fix failed."
-	sed -i -e "s:-Wall:-Wall ${CFLAGS}:g" ${S}/utils/Makefile \
-		|| die "utils Makefile CFLAGS fix failed."
-
-	# fix up paths for multilib
-	sed -i -e "/^LIBDIR/s/lib/$(get_libdir)/" ${S}/src/Makefile \
-		|| die "Fix for multilib LIBDIR failed."
-	sed -i -e "/^SHLIBDIR/s/lib/$(get_libdir)/" ${S}/src/Makefile \
-		|| die "Fix for multilib SHLIBDIR failed."
-}
-
-src_compile() {
-	emake || die
-}
-
-src_install() {
-	make DESTDIR="${D}" install
-}
