@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/libselinux
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.45 2006/03/18 14:52:15 pebenito Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.46 2006/03/22 22:44:44 pebenito Exp $
+
+  22 Mar 2006; Chris PeBenito <pebenito@gentoo.org> -libselinux-1.24.ebuild,
+  -libselinux-1.28.ebuild, libselinux-1.28-r1.ebuild:
+  Mark 1.28-r1 stable, clean out old ebuilds.
 
 *libselinux-1.30 (18 Mar 2006)
 
